--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-firestore": "^1.0.1",
     "react-native": "^0.62.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slideshow-image": "^1.4.2",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "typescript": "^3.7.5"
