--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.14.0",
     "google-maps-react": "^2.0.6",
+    "include-media": "^1.4.9",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.13.1",
