--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-share": "^4.2.0",
     "react-slideshow-image": "^1.4.2",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
