--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.1.3",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.0",
+    "firebase-tools": "^8.4.2",
     "google-maps-react": "^2.0.6",
     "include-media": "^1.4.9",
     "node-sass": "^4.14.1",
