--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/db/index.js
 .env
 .env.production
 
@@ -34,3 +33,5 @@ yarn-error.log*
 .firebase/
 .firebaserc
 firebase.json
+
+src/db/serviceAccountKey.json
