--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/react-router-dom": "^5.1.3",
     "dotenv": "^8.2.0",
-    "firebase": "^7.14.0",
+    "firebase": "^9.9.3",
     "firebase-tools": "^8.4.2",
     "google-maps-react": "^2.0.6",
     "include-media": "^1.4.9",
-    "node-sass": "^4.14.1",
-    "react": "^16.12.0",
+    "node-sass": "^7.0.1",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-firestore": "^1.0.1",
+    "react-google-maps": "^9.4.5",
     "react-native": "^0.62.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.7.16",
     "react-share": "^4.2.0",
     "react-slideshow-image": "^1.4.2",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
-    "typescript": "^3.7.5"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
